# MitoFinder

./: .gitignore  LICENSE  Mitofinder.config  README.md  environment.yml  install.sh  pyproject.toml
NCBI_submission/: create_tbl2asn_files.py  index_file.csv
src/mitofinder/: FirstBuildChecker.py  circularizationCheck.py  export_mitochondrial_contigs.py  extract_genes.py  extract_seq.py  genbankOutput.py  geneChecker.py  geneChecker_fasta.py  geneChecker_fasta_gaps.py  mitofinder.py  rename_fasta_seqID.py  runIDBA.py  runMegahit.py  runMetaspades.py  sort_gff.py  tRNAscanChecker.py  utils.py
