[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mitofinder"
authors = [{ name = "Remi Allio", email = "remi.allio@umontpellier.fr" }]

description = "MitoFinder: efficient automated large-scale extraction of mitogenomic data from high throughput sequencing data."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

dynamic = ["version", "dependencies"]

[tool.setuptools_scm]
write_to = "src/mitofinder/_version.py"

[tool.setuptools.dynamic]
#version = { attr = "mitofinder.__version__" }
dependencies = { file = "requirements.txt" }

[project.urls]
homepage = "https://github.com/RemiAllio/MitoFinder"
documentation = "https://github.com/RemiAllio/MitoFinder"
repository = "https://github.com/RemiAllio/MitoFinder"

[project.scripts]
mitofinder = "mitofinder.mitofinder:main"


# Create and push tags
# git tag -a v0.0.4 
# git push origin v0.0.4

# Check what setuptools_scm thinks the current version is and create _version.py
# git describe
# python -m setuptools_scm
# python setup.py --version

# Build
# python3 -m pip install --upgrade build && python3 -m build
# OR
# Build sdist
# python setup.py sdist 

# Push to pypi
# twine upload dist/*
